VP-3: исправить api профиля VP-4: сделать обработку картинок
